--- a/TelosysTools/templates/python-template/python_json_serializer.vm
+++ b/TelosysTools/templates/python-template/python_json_serializer.vm
@@ -7,10 +7,10 @@ class ${entity.name}JsonSerializer(object):
     def to_json(self, entity: ${entity.name}):
         return {
 #foreach($field in $entity.attributes)
-#if(! $field.isDateType() and $field.databaseType != 'DATETIME')
-            "${field.name}": entity.${field.name},
-#else
+#if($field.isDateType() or $field.databaseType == 'DATETIME' or $field.databaseType == 'TIMESTAMP')
             "${field.name}": str(entity.${field.name}),
+#else
+            "${field.name}": entity.${field.name},
 #end
 #end
         }
@@ -19,7 +19,7 @@ class ${entity.name}JsonSerializer(object):
         data = json.loads(json_content)
         entity = ${entity.name}()
 #foreach( $field in $entity.attributes)
-#if( ! $field.isDateType() and $field.databaseType != 'DATETIME' )
+#if( ! $field.isDateType() and $field.databaseType != 'DATETIME' and $field.databaseType != 'TIMESTAMP')
         entity.${field.name} = data['${field.name}']
 #else
         entity.${field.name} = datetime.datetime.strptime(data['${field.name}'], "%Y-%m-%d %H:%M:%S")
