--- a/TelosysTools/templates/python-template/python_dao.vm
+++ b/TelosysTools/templates/python-template/python_dao.vm
@@ -6,7 +6,7 @@ from sqlalchemy import event
 
 
 @event.listens_for(Engine, "connect")
-def set_sqlite_pragma(dbapi_connection, connection_record):
+def set_pragma(dbapi_connection, connection_record):
     cursor = dbapi_connection.cursor()
     cursor.execute("PRAGMA foreign_keys=ON")
     cursor.close()
@@ -34,53 +34,45 @@ class GenericDao(object):
         try:
             session = self.get_connexion()
             entity = session.query(self.entity_type).filter(query).first()
-            return {"entity": entity, "code": 200}
+            return entity
         except SQLAlchemyError as e:
             print(e)
             return e
 
-    def do_insert(self, entity, query):
+    def do_insert(self, entity):
         session = None
         try:
             session = self.get_connexion()
-            exist = self.do_select(query)
-            if exist['entity']:
-                return {"code": 409} 
-            else:
-                session.add(entity)
-                session.commit()
-                return {"code": 201}
+            session.add(entity)
+            session.commit()
+            return entity
         except SQLAlchemyError as e:
             print(e)
             session.rollback()
-            return {"code": 500, "message": e} 
+            return e
 
     def do_update(self, entity, query):
         session = None
         try:
             session = self.get_connexion()
-            exist = self.do_select(query)
-            if exist['entity']:
-                session.query(self.entity_type).filter(query).update(entity.to_dict(), synchronize_session='fetch')
-                session.commit()
-                return {"entity": entity, "code": 200}
-            else:
-                session.add(entity)
-                session.commit()
-                return {"entity": entity, "code": 201}
+            result = session.query(self.entity_type).filter(query).update(entity.to_dict(), synchronize_session='fetch')
+            session.commit()
+            return result
         except SQLAlchemyError as e:
             print(e)
             session.rollback()
-            return {"code": 500, "message": e} 
+            return e
 
     def do_delete(self, query):
+        session = None
         try:
             session = self.get_connexion()
             result = session.query(self.entity_type).filter(query).delete(synchronize_session='fetch')
             session.commit()
-            return {"entity": result, "code": 204}
+            return result
         except SQLAlchemyError as e:
             print(e)
+            session.rollback()
             return e
 
     def do_count_all(self):
@@ -91,3 +83,13 @@ class GenericDao(object):
         except SQLAlchemyError as e:
             print(e)
             return e
+
+    def do_exists(self, query):
+        try:
+            session = self.get_connexion()
+            q = session.query(self.entity_type).filter(query)
+            return session.query(q.exists()).scalar()
+        except SQLAlchemyError as e:
+            print(e)
+            return e
+
