--- a/TelosysTools/templates/python-template/python_entity_class.vm
+++ b/TelosysTools/templates/python-template/python_entity_class.vm
@@ -1,40 +1,61 @@
 ${SHARP} Python class for entity ${entity.name} 
 ${SHARP} Created on $today.date ( Time $today.time )
+#set( $table = "" )
+#set( $table = $entity )
 
-#set( $table = $entity)
 from sqlalchemy import *
 from commons.get_connexion import Base
 
 
 class ${entity.name}(Base):
     __tablename__ = '$entity.name'
+## --- Entity without Composite keys
+#if( ! $entity.hasCompositePrimaryKey())
+#foreach( $field in $entity.keyAttributes )
+## --- Key attributes
+#if($field.wrapperType == 'BigDecimal' or $field.wrapperType == 'Short' )
+#set( $type = 'Integer' )
+#else
+#set( $type = $field.wrapperType )
+#end
+    $field.name = Column($type, primary_key=True#if($field.isNotNull()), nullable=False#end, unique=True#if($field.isAutoIncremented()), autoincrement=True#end)
+#set( $entity = $table )
+#end
+## --- Non key attributes
+#foreach( $field in $entity.nonKeyAttributes )
+#if($field.wrapperType == 'BigDecimal' or $field.wrapperType == 'Short' )
+#set( $type = 'Integer' )
+#else
+#set( $type = $field.wrapperType )
+#end
+    $field.name = Column($type#if($field.isFK())#set($entity = $field.referencedEntity), ForeignKey('${field.referencedEntity}.${entity.keyAttributesNamesAsString('')}', ondelete='RESTRICT')#end#if($field.isNotNull()), nullable=False#end)
+#set( $entity = $table )
+#end
+#else
+## --- Entity with Composite Key
+#foreach( $field in $entity.keyAttributes )
+## --- Key attributes
+#if($field.wrapperType == 'BigDecimal' or $field.wrapperType == 'Short' )
+#set( $type = 'Integer' )
+#else
+#set( $type = $field.wrapperType )
+#end
+    $field.name = Column($type#if($field.isFK())#set($entity = $field.referencedEntity), ForeignKey('${field.referencedEntity}.${entity.keyAttributesNamesAsString('')}')#end, primary_key=True#if($field.isNotNull()), nullable=False#end)
+#set( $entity = $table )
+#end
+#foreach( $field in $entity.nonKeyAttributes )
+## --- Non key attributes
+#if($field.wrapperType == 'BigDecimal' or $field.wrapperType == 'Short' )
+#set( $type = 'Integer' )
+#else
+#set( $type = $field.wrapperType )
+#end
+    $field.name = Column($type#if($field.isFK())#set($entity = $field.referencedEntity), ForeignKey('${field.referencedEntity}.${entity.keyAttributesNamesAsString('')}', ondelete='RESTRICT')#end#if($field.isNotNull()), nullable=False#end)
+#set( $entity = $table )
+#end
+#end
 
-#if(! $entity.hasCompositePrimaryKey())
-#foreach( $field in $entity.attributes )
-#if($field.isKeyElement())
-    $field.name = Column($field.wrapperType, primary_key=True#if($field.isNotNull()), nullable=False#end, unique=True, autoincrement=True)
-#elseif($field.isFK())
-#set($entity = $field.referencedEntity)
-    $field.name = Column($field.wrapperType, ForeignKey('${field.referencedEntity}.${entity.keyAttributesNamesAsString('')}', ondelete="RESTRICT")#if($field.isNotNull()), nullable=False#end)
-#else
-    $field.name = Column($field.wrapperType#if($field.isNotNull()), nullable=False#end)
-#end
-#end
-#else
-#foreach( $field in $entity.attributes )
-#if($field.isKeyElement())
-#set($entity = $field.referencedEntity)
-    $field.name = Column($field.wrapperType, ForeignKey('${field.referencedEntity}.${entity.keyAttributesNamesAsString('')}', ondelete="RESTRICT"), primary_key=True#if($field.isNotNull()), nullable=False#end)
-#elseif($field.isFK())
-#set($entity = $field.referencedEntity)
-    $field.name = Column($field.wrapperType, ForeignKey('${field.referencedEntity}.${entity.keyAttributesNamesAsString('')}', ondelete="RESTRICT")#if($field.isNotNull()), nullable=False#end)
-#else
-    $field.name = Column($field.wrapperType#if($field.isNotNull()), nullable=False#end)
-#end
-#end
-#end
-
-#set($entity = $table)
+#set( $entity = $table )
     def __init__(self#foreach( $field in $entity.attributes ), $field.name='null'#end):
 #foreach( $field in $entity.attributes )
         self.$field.name = $field.name
