--- a/TelosysTools/templates/python-template/python_get_connexion.vm
+++ b/TelosysTools/templates/python-template/python_get_connexion.vm
@@ -18,5 +18,5 @@ def create_connexion():
     config.read('C:/Users/aurlucas/PycharmProjects/back-python/commons/config.cfg')
     database_url = config.get('database', 'url_database')
     engine = create_engine(database_url, echo=True)
-    Base.metadata.create_all(engine)
+    ${SHARP} Base.metadata.create_all(engine)
     return engine
